--- a/weather/weather.html
+++ b/weather/weather.html
@@ -61,6 +61,7 @@
         main{
             width: 100%;
             display: flex;
+            margin-top: 2%;
         }
 
         main svg{
@@ -88,14 +89,16 @@
         }
 
         main .wrap .weather_cards {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
+            display: grid;
+            justify-content: space-between;
+            grid-template-columns: repeat(auto-fill, 160px);
+            grid-gap: 10px;
         }
 
+
         main .wrap .weather_cards .card {
-            width: 200PX;
-            height: 300PX;
+            width: 100%;
+            height: 350PX;
             margin: 10px 0;
             border-radius: 20px;
             background-color: wheat;
@@ -121,7 +124,6 @@
     <nav>
         <h1>Weather Report</h1>
         <div class="btns">
-            <button id="btn-all" disabled>全部</button>
             <button id="btn-north" onclick="filter1(countryNorth)">北部地區</button>
             <button id="btn-west" onclick="filter1(countryWest)">中部地區</button>
             <button id="btn-south" onclick="filter1(countrySouth)">南部地區</button>
@@ -323,12 +325,11 @@
         })
         .then(function (myJson) {
             const weatherCards = document.querySelector('.weather_cards')
-            const country = ['嘉義縣', '新北市', '嘉義市', '新竹縣', '新竹市', '臺北市', '臺南市', '宜蘭市', '苗栗縣', '雲林縣', '花蓮縣', '臺中市', '臺東縣', '桃園市', '南投縣', '高雄市', '金門縣', '屏東縣', '基隆市', '澎湖縣', '彰化縣']
+            const country = ['嘉義縣', '新北市', '嘉義市', '新竹縣', '新竹市', '臺北市', '臺南市', '宜蘭市', '苗栗縣', '雲林縣', '花蓮縣', '臺中市', '臺東縣', '桃園市', '南投縣', '高雄市','連江縣','金門縣', '屏東縣', '基隆市', '澎湖縣', '彰化縣']
             const countryNorth = ['臺北市', '新北市', '基隆市', '新竹市', '桃園市', '新竹縣', '宜蘭市']
             const countryWest = ['臺中市', '苗栗縣', '彰化縣', '南投縣', '雲林縣']
-            const countrySouth = ['高雄市', '臺南市', '嘉義市', '嘉義縣', '屏東縣', '澎湖縣']
-            const countryEast = ['花蓮縣', '臺東縣', '金門縣']
-            const btnAll = document.querySelector('#btn-all')
+            const countrySouth = ['高雄市', '臺南市', '嘉義市', '嘉義縣', '屏東縣']
+            const countryEast = ['花蓮縣', '臺東縣', '金門縣','連江縣', '澎湖縣']
             const btnNorth = document.querySelector('#btn-north')
             const btnWest = document.querySelector('#btn-west')
             const btnSouth = document.querySelector('#btn-south')
@@ -368,40 +369,6 @@
                 </div>
                 `
             }
-            //點下全部時，顯示全部的天氣卡片
-            btnAll.onclick = function () {
-                weatherCards.innerHTML = ""
-                for (let i = 0; i < country.length; i++) {
-                    let order = country.indexOf(`${country[i]}`)
-                    //設定要點下地圖產生卡片所需的資料
-                    let location = myJson.records.location[order].locationName
-                    let rainRate = myJson.records.location[order].weatherElement[1].time[0].parameter.parameterName
-                    let mintemperature = myJson.records.location[order].weatherElement[2].time[0].parameter.parameterName
-                    let maxtemperature = myJson.records.location[order].weatherElement[4].time[0].parameter.parameterName
-                    let evaluator = myJson.records.location[order].weatherElement[0].time[0].parameter.parameterName
-                    //設定圖片路徑
-                    let picture = ['./img/sun.png', './img/cloud.jpg', './img/rain.jpg']
-                    let picPath
-                    if (rainRate <= 25) {
-                        picPath = picture[0]
-                    } else if (rainRate <= 50) {
-                        picPath = picture[1]
-                    } else {
-                        picPath = picture[2]
-                    }
-                    weatherCards.innerHTML += `
-                <div class="card" style='width:9% '>
-                    <img src="${picPath}" alt="氣象示意圖">
-                    <h2>${country[i]}</h2>
-                    <div class="info">
-                        <p class="rain_rate">降雨機率${rainRate}%</p>
-                        <p class="temp">溫度：${mintemperature}°C~${maxtemperature}°C</p>
-                        <p class="evaluation">${evaluator}</p>
-                    </div>
-                </div>
-                `
-                }
-            }
 
             //點下各區時，產生各區天氣卡片
             //北
@@ -426,7 +393,7 @@
                         picPath = picture[2]
                     }
                     weatherCards.innerHTML += `
-                <div class="card" style='width:24%'>
+                <div class="card" >
                     <img src="${picPath}" alt="氣象示意圖">
                     <h2>${countryNorth[i]}</h2>
                     <div class="info">
@@ -460,7 +427,7 @@
                         picPath = picture[2]
                     }
                     weatherCards.innerHTML += `
-                <div class="card" style='width:24%'>
+                <div class="card" >
                     <img src="${picPath}" alt="氣象示意圖">
                     <h2>${countryWest[i]}</h2>
                     <div class="info">
@@ -494,7 +461,7 @@
                         picPath = picture[2]
                     }
                     weatherCards.innerHTML += `
-                <div class="card" style='width:24%'>
+                <div class="card" >
                     <img src="${picPath}" alt="氣象示意圖">
                     <h2>${countrySouth[i]}</h2>
                     <div class="info">
@@ -528,7 +495,7 @@
                         picPath = picture[2]
                     }
                     weatherCards.innerHTML += `
-                <div class="card" style='width:24%'>
+                <div class="card" >
                     <img src="${picPath}" alt="氣象示意圖">
                     <h2>${countryEast[i]}</h2>
                     <div class="info">
